# dynet

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dynet.json  flavor.json  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml
crates/dynet-api/: Cargo.toml
crates/dynet-api/src/: lib.rs
crates/dynet-api/tests/: control.rs  runtime.rs
crates/dynet-capture/: Cargo.toml
crates/dynet-capture/src/: flow.rs  ipstack_poc.rs  lib.rs  linux.rs  linux_checks.rs  linux_plan.rs  linux_tun.rs  linux_types.rs  packet.rs
crates/dynet-capture/src/linux/: dns_mapping.rs  fragments.rs  hooks.rs  nft.rs  router_ingress.rs  scope.rs
crates/dynet-capture/src/linux/hooks/: status.rs
crates/dynet-capture/tests/: linux_dns_mapping.rs  linux_router_ingress.rs  linux_takeover.rs  linux_tun_fd.rs  packet.rs
crates/dynet-capture/tests/support/: mod.rs
crates/dynet-cli/: AGENTS.md  Cargo.toml
crates/dynet-cli/src/: api.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  nested_args.rs  output.rs  paths.rs  platform.rs  runtime_reload.rs  service.rs  service_runtime.rs  tun.rs
crates/dynet-cli/src/cli/: help.rs  mod.rs  probe_read.rs  probe_retry.rs  run_limits.rs  run_tcp.rs  types.rs  values.rs
crates/dynet-cli/src/output/: json.rs  labels.rs  runtime.rs  text.rs
crates/dynet-cli/src/platform/: command.rs  desired.rs  probes.rs  resources.rs  takeover.rs
crates/dynet-cli/tests/: args.rs  runtime_reload.rs  runtime_shutdown.rs  unit.rs
crates/dynet-cli/tests/unit/: boundary.rs  cli.rs  config.rs  output.rs  plan.rs
crates/dynet-ingress/: Cargo.toml
crates/dynet-ingress/src/: captured.rs  dns.rs  egress.rs  event.rs  inbound.rs  lib.rs  outbound.rs  socks.rs
crates/dynet-ingress/src/egress/: direct.rs  graph.rs  observation.rs  reloadable.rs  shadowsocks.rs  trojan.rs  udp_downstream.rs  udp_observation.rs  vless.rs  vmess.rs
crates/dynet-ingress/src/outbound/: graph.rs  shadowsocks.rs  trojan.rs  vless.rs  vmess.rs
crates/dynet-ingress/src/socks/: events.rs  model.rs  protocol.rs
crates/dynet-ingress/tests/: captured.rs  dns.rs  socks.rs  socks_fake_dns.rs  socks_graph.rs  socks_udp_dialer_graph.rs  socks_udp_graph.rs  tcp.rs  udp.rs
crates/dynet-ingress/tests/support/: mod.rs
crates/dynet-runtime/: AGENTS.md  Cargo.toml
crates/dynet-runtime/src/: dns.rs  event.rs  lib.rs  model.rs  persistence.rs  settings.rs  socket.rs  stores.rs  takeover.rs  traffic_session.rs
crates/dynet-runtime/src/dns/: https.rs  mod.rs  wire.rs
crates/dynet-runtime/src/model/: cidr.rs  forward_node.rs  ip_family.rs  matrix_active.rs  matrix_service.rs  matrix_shadow.rs  matrix_stats.rs  runtime_config.rs  selection_error.rs  target_context.rs
crates/dynet-runtime/src/outbound/: buffered_read.rs  cascade.rs  dialer.rs  mod.rs  shadowsocks.rs  stream.rs  tcp_socket.rs  trojan.rs  udp.rs  vmess_adapter.rs
crates/dynet-runtime/src/outbound/trojan/: adapter.rs  mod.rs
crates/dynet-runtime/src/persistence/: bootstrap.rs  dns_policy.rs  maintenance.rs  recovery.rs  schema.rs  sink.rs  validation.rs
crates/dynet-runtime/src/persistence/bootstrap/: insert.rs  row_value.rs
crates/dynet-runtime/src/probe/: fallback.rs  http.rs  mod.rs  outcome.rs  retry.rs  scope.rs  target.rs
crates/dynet-runtime/src/resolver/: mod.rs  trace.rs  upstream.rs
crates/dynet-runtime/src/tun/: event_context.rs  ipv6_guard.rs  mod.rs  outbound_events.rs  tcp_forward.rs  udp_downstream.rs  udp_forward.rs  udp_packet.rs  user_rule.rs
crates/dynet-runtime/src/tun/tcp/: mod.rs  packet.rs  poller.rs  route_fallback.rs  route_select.rs  session.rs  start_failure.rs  target_select.rs
crates/dynet-runtime/src/vmess/: crypto.rs  mod.rs  target.rs  transport.rs
crates/dynet-runtime/tests/: config_audit.rs  dns_chain.rs  dns_wire.rs  ipv6_policy.rs  outbound_adapters.rs  outbound_disposition.rs  persistence.rs  persistence_limits.rs  persistence_recovery.rs  probe_read_policy.rs  reconfigure.rs  selection.rs  selection_active.rs  selection_groups.rs
crates/dynet-runtime/tests/support/: outbound_configs.rs  outbound_events.rs  outbound_server.rs  vmess_crypto.rs  vmess_responder.rs
crates/dynet-service/: Cargo.toml
crates/dynet-service/src/: artifact.rs  lib.rs  model.rs  procd.rs  runner.rs  supervisor.rs  systemd.rs
crates/dynet-service/tests/: control.rs  procd_tun.rs
crates/dynet-service/tests/support/: mod.rs
crates/dynet-state/: Cargo.toml
crates/dynet-state/src/: env_config.rs  forwarding_config.rs  lib.rs  method_config.rs  outbound_config.rs  persistence_config.rs  reload.rs  service_config.rs  socks_config.rs  summary.rs
crates/dynet-state/src/forwarding_config/: dns_upstream.rs  group_thresholds.rs  method.rs  node_fingerprint.rs  route_rule.rs  validation.rs
crates/dynet-state/src/integration_config/: dns_mapping.rs  mod.rs  router_ingress.rs
crates/dynet-state/tests/: config.rs  config_forwarding.rs  config_outbound.rs  config_reload.rs  config_summary.rs  config_thresholds.rs
docs/: full-takeover.md
docs/lab/: dynet-lab.toml  (+3 more)
prototype/shadowsocks/: Cargo.toml
prototype/shadowsocks/src/: address.rs  aead2017.rs  aead2022.rs  lib.rs
prototype/shadowsocks/src/aead2022/: crypto.rs  replay.rs  udp.rs
prototype/shadowsocks/tests/: format.rs  format_2022.rs
prototype/trojan/: Cargo.toml
prototype/trojan/src/: lib.rs
prototype/trojan/tests/: format.rs
prototype/vless/: Cargo.toml
prototype/vless/src/: crypto.rs  lib.rs  reality_stream.rs  sync_adapter.rs  tls_fuzzy_deframer.rs  tls_parse.rs  util.rs  vision_filter.rs  vision_stream.rs  vision_unpad.rs  vless_protocol.rs
prototype/vless/src/reality/: mod.rs  reality_cipher_suite.rs  reality_client_connection.rs  reality_client_verify.rs  reality_util.rs
prototype/vless/tests/: format.rs  reality_tcp.rs  reality_udp.rs
prototype/vmess/: Cargo.toml
prototype/vmess/src/: lib.rs  protocol.rs
prototype/vmess/tests/: format.rs
scripts/: __init__.py  build-openwrt.sh  dynetctl.sh  init.py  pyproject.toml  sync-vpn-config.py  vmctl.py
(+416 files in other folders)
