[package]
name = "dynet-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane API surface for dynet."

[dependencies]
axum = "0.8"
dynet-ingress = { path = "../dynet-ingress" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net"] }
utoipa = "5"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
