[package]
name = "dynet-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal dynet binary skeleton."

[dependencies]
dynet-api = { path = "../dynet-api" }
dynet-ingress = { path = "../dynet-ingress" }
dynet-state = { path = "../dynet-state" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[[bin]]
name = "dynet"
path = "src/main.rs"
