[package]
name = "dynet-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal dynet binary skeleton."

[dependencies]
dynet-api = { path = "../dynet-api" }
dynet-capture = { path = "../dynet-capture" }
dynet-ingress = { path = "../dynet-ingress" }
dynet-runtime = { path = "../dynet-runtime" }
dynet-service = { path = "../dynet-service" }
dynet-state = { path = "../dynet-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dynet"
path = "src/main.rs"
