[package]
name = "dynet-ingress"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transparent ingress relay experiments for dynet."

[dependencies]
dynet-runtime = { path = "../dynet-runtime" }
shadowsocks-prototype = { path = "../../prototype/shadowsocks" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
trojan-prototype = { path = "../../prototype/trojan" }
vless-prototype = { path = "../../prototype/vless" }
vmess-prototype = { path = "../../prototype/vmess" }

[dev-dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
md-5 = "0.10"
sha1 = "0.10"
