[package]
name = "dynet-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-owned TUN and DNS runtime boundary for dynet."

[dependencies]
aes = "0.8"
crc32fast = "1"
dynet-core = { path = "../dynet-core" }
libc = "0.2"
md-5 = "0.10"
rand = "0.8"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
webpki-roots = "1"

[target.'cfg(target_os = "linux")'.dependencies]
smoltcp = { version = "0.13.1", default-features = false, features = ["std", "alloc", "log", "medium-ip", "phy-tuntap_interface", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-tcp", "socket-udp"] }
