[package]
name = "dynet-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Current dynet application state and configuration."

[dependencies]
dynet-ingress = { path = "../dynet-ingress" }
dynet-runtime = { path = "../dynet-runtime" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
