[package]
name = "trojan-prototype"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prototype hand-written Trojan client protocol support for dynet."

[dependencies]
native-tls = "0.2"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "net"] }
tokio-native-tls = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
