[package]
name = "vless-prototype"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prototype VLESS client protocol support for dynet."

[dependencies]
aws-lc-rs = { version = "1", default-features = false, features = ["non-fips"] }
base64 = "0.22"
bytes = "1"
futures = "0.3"
log = "0.4"
memchr = "2"
rand = "0.9"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs"] }
subtle = "2"
tokio = { version = "1", features = ["io-util", "net"] }
uuid = "1"
x509-parser = { version = "0.18", default-features = false }

[dev-dependencies]
native-tls = "0.2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-native-tls = "0.3"
